@@ -321,6 +321,11 @@ static int butterfly_initialize(PROGRAMMER * pgm, AVRPART * p)
   butterfly_send(pgm, buf, 2);
   butterfly_vfy_cmd_sent(pgm, "select device");
 
+  if (verbose)
+    fprintf(stderr,
+	    "%s: devcode selected: 0x%02x\n",
+	    progname, (unsigned)buf[1]);
+
   butterfly_enter_prog_mode(pgm);
 
   return 0;
